chore(build): Update renovate.json

--- a/renovate.json
+++ b/renovate.json
@@ -4,5 +4,12 @@
   "extends": [
     "config:base"
   ],
-  "timezone": "Asia/Tokyo"
+  "timezone": "Asia/Tokyo",
+  "stabilityDays": 7,
+  "packageRules": [
+    {
+      "matchUpdateTypes": ["minor", "patch", "pin", "digest"],
+      "automerge": true
+    }
+  ]
 }
